rhokp-deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhokp
  labels:
    kubernetes.io/metadata.name: rhokp
